# svgio

./: README.md  setup.cfg
svgio/: __init__.py  basic.py  constants.py  nodes.py  path.py  svgio.py
test/: test_angle.py  test_arc_length.py  test_bbox.py  test_clippath.py  test_color.py  test_copy.py  test_css.py  test_cubic_bezier.py  test_descriptive_elements.py  test_document.py  test_element.py  test_generation.py  test_group.py  test_length.py  test_matrix.py  test_parsing.py  test_path.py  test_path_dunder.py  test_path_segments.py  test_paths.py  test_point.py  test_quadratic_bezier.py  test_repr.py  test_shape.py  test_viewbox.py
