[metadata]
name = svgio
version = 0.0.1
description = SVG Reading, Writing, Rendering
long_description_content_type=text/markdown
long_description = file: README.md
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Editors :: Vector-Based
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords = svg, path, elements, matrix, vector, parser, reader, writer
author = Tatarize
author_email = tatarize@gmail.com
url = https://github.com/meerk40t/svgio
license = MIT

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    = .
test_suite =  test

[pep8]
max-line-length=100

[bdist_wheel]
universal=1

